--- a/src/style/icons.scss
+++ b/src/style/icons.scss
@@ -53,6 +53,7 @@
 .icon-github::before { content: "🐙"; }
 .icon-bell::before { content: "🔔"; }
 .icon-settings::before { content: "⚙️"; }
+.icon-trash::before { content: "🗑️"; }
 .icon-orange::before { content: "🍊"; }
 .icon-tangerine::before { content: "🍊"; }
 
